# ideal-gas-video

./: .gitignore  .gitmodules  script.txt  test.py
n-body-sim/: .ycm_extra_conf.py  CMakeLists.txt
n-body-sim/includes/: basic_particle_force.hpp  collision.hpp  particle.hpp  particle_manager.hpp  real.hpp  vector.hpp  xorshift.hpp
n-body-sim/src/: basic_particle_force.cpp  collision.cpp  main.cpp  particle.cpp  particle_manager.cpp  vector.cpp  xorshift.cpp
